--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 .column {
-    background-color: rgb(232, 207, 207);
+    background-color: rgb(228, 227, 227);
     margin-top: 20px;
     padding: 25px;
     width: 250px;
@@ -19,7 +19,7 @@ body{
 
 .card {
     background-color: white;
-    border-radius: 15px;
+    border-radius: 10px;
     padding: 10px;
     margin-top: 10px;
 }
@@ -54,11 +54,29 @@ ul {
     padding: 0;
 }
 
+.but-test {
+    background-color: rgb(0, 128, 255);
+    width: 120px;
+    height: 30px;
+    color: white;
+    margin-top: 10px;
+    margin-right: 20px;
+    font-family: sans-serif;
+    font-size: 13px;
+    border-radius: 5px;
+    border: none;
+}
+
+.but-test:hover {
+    background-color: rgb(0, 117, 234);
+}
+
 .but-work {
     background-color: rgb(0, 128, 255);
     width: 80px;
     height: 30px;
     color: white;
+    margin-top: 10px;
     font-family: sans-serif;
     font-size: 13px;
     border-radius: 5px;
@@ -69,18 +87,20 @@ ul {
     background-color: rgb(0, 116, 230);
 }
 
-.but-edit {
+.but-return {
     background-color: rgb(255, 136, 0);
-    width: 120px;
+    width: 80px;
     height: 30px;
     color: white;
+    margin-top: 10px;
+    margin-right: 20px;
     font-family: sans-serif;
     font-size: 13px;
     border-radius: 5px;
     border: none;
 }
 
-.but-edit:hover {
+.but-return:hover {
     background-color: rgb(244, 108, 2);
 }
 
@@ -100,11 +120,11 @@ ul {
 }
 
 .but {
-    background-color: rgb(0, 126, 255);
+    background-color: rgb(34, 218, 70);
     color: white;
-    width: 100px;
+    width: 90px;
     height: 30px;
-    margin-top: 10px;
+    margin-top: 20px;
     padding: 6px;
     font-family: sans-serif;
     font-size: 14px;
@@ -112,16 +132,51 @@ ul {
     border: none;
 }
 
-.but:hover {
-    background-color: rgb(6, 80, 149);
+.but-edit {
+    background-color: rgb(138, 133, 133);
+    color: white;
+    width: 120px;
+    height: 30px;
+    padding: 3px;
+    margin-right: 10px;
+    font-family: sans-serif;
+    font-size: 13px;
+    border-radius: 5px;
+    border: none;
 }
 
-p{
+.but-edit:hover {
+    background-color: rgb(166, 164, 164);
+}
+
+.but:hover {
+    background-color: rgb(0, 202, 40);
+}
+
+.but-comp {
+    background-color: rgb(7, 174, 7);
+    color: white;
+    width: 100px;
+    height: 30px;
+    padding: 3px;
+    margin-right: 10px;
+    font-family: sans-serif;
+    font-size: 13px;
+    border-radius: 5px;
+    border: none;
+}
+
+.but-comp:hover {
+    background-color: rgb(0, 161, 0);
+}
+p {
+    margin-top: 20px;
     font-family: sans-serif;
 }
 
 
-p{
+p {
+    margin-top: 20px;
     font-family: sans-serif;
 }
 
@@ -131,8 +186,10 @@ form {
 }
 
 .form {
-    height: 30px;
+    height: 14px;
     width: 230px;
+    font-size: 12px;
+    border: none;
     border-radius: 5px;
     margin-top: 15px;
     padding: 10px;
@@ -164,7 +221,7 @@ form {
 .add-card-form {
     margin-top: 20px;
     padding: 20px;
-    background-color: rgba(253,190,207, .5);
+    background-color: rgb(228, 227, 227);
     border-radius: 8px;
 }
 
